SFDCProject/src/objects/App_Log__c.object
<CustomObject>
    <description>Generic object used to log exceptions and other information related to code or api.</description>
    <fields>
        <fullName>Action__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>If there are multiple type of actions within a module, it can be identified here.</inlineHelpText>
        <label>Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Details2__c</fullName>
        <inlineHelpText>If we cannot fit the given details into first details field, then rest of the content will be stored here.</inlineHelpText>
        <label>Details2</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Details3__c</fullName>
        <inlineHelpText>If the length of the contents exceeds to be fit in Details and Details2 field, then it will be written here.</inlineHelpText>
        <label>Details3</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Details4__c</fullName>
        <label>Details4</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <inlineHelpText>This field can be used to store any external identifiers that related to the record that associated with this app log.</inlineHelpText>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <inlineHelpText>Messages associated with the log.</inlineHelpText>
        <label>Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Module__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>The module which generated this log. This may or may not correspond to a class.</inlineHelpText>
        <label>Module</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Id__c</fullName>
        <inlineHelpText>If this log is related to a particular Salesforce record, then that record could be specified here.</inlineHelpText>
        <label>Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record__c</fullName>
        <formula>If(Not(IsBlank(Record_Id__c)), HYPERLINK(&apos;/&apos; + Record_Id__c, Record_Id__c), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Generates the hyperlink to view the Salesforce record related to this log. This link is applicable only if there is a record id populated in the record.</inlineHelpText>
        <label>Record</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sobject__c</fullName>
        <inlineHelpText>If this log is related to a salesforce record, that records sobject name is listed here.</inlineHelpText>
        <label>Sobject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sync_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sync Record</label>
        <referenceTo>Sync_Record__c</referenceTo>
        <relationshipLabel>App Logs</relationshipLabel>
        <relationshipName>App_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>System__c</fullName>
        <inlineHelpText>If this log due to a request received from external system, that system could be listed here.</inlineHelpText>
        <label>System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <inlineHelpText>Type of this api log. It is upto the clients to identify the type of the log.</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debug</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Value1__c</fullName>
        <label>Value1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value2__c</fullName>
        <label>Value2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value3__c</fullName>
        <label>Value3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>App Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Module__c</columns>
        <columns>Action__c</columns>
        <columns>Message__c</columns>
        <columns>Record__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Record_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Ambit_Lead_Create_Requests</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>System__c</columns>
        <columns>Module__c</columns>
        <columns>Action__c</columns>
        <columns>Message__c</columns>
        <columns>Record__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Module__c</field>
            <operation>equals</operation>
            <value>Api</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Action__c</field>
            <operation>startsWith</operation>
            <value>LeadApiCreateLead</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>contains</operation>
            <value>aener</value>
        </filters>
        <label>All Ambit Lead Create Requests</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Api_Request_errors</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>System__c</columns>
        <columns>Module__c</columns>
        <columns>Action__c</columns>
        <columns>Message__c</columns>
        <columns>Record__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Error</value>
        </filters>
        <label>All Api Request errors</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Api_Requests</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Details2__c</columns>
        <columns>Module__c</columns>
        <columns>Action__c</columns>
        <columns>Message__c</columns>
        <columns>Record__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Module__c</field>
            <operation>equals</operation>
            <value>Api</value>
        </filters>
        <label>All Api Requests</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Aws_Sqs_Sync</fullName>
        <columns>NAME</columns>
        <columns>Module__c</columns>
        <columns>Action__c</columns>
        <columns>Type__c</columns>
        <columns>Message__c</columns>
        <columns>Sobject__c</columns>
        <columns>Record__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Module__c</field>
            <operation>equals</operation>
            <value>AwsSqsSync</value>
        </filters>
        <label>All Aws Sqs Sync</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Core_Logic_Calls_Today</fullName>
        <columns>NAME</columns>
        <columns>Module__c</columns>
        <columns>Action__c</columns>
        <columns>Sobject__c</columns>
        <columns>Type__c</columns>
        <columns>Record__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Module__c</field>
            <operation>equals</operation>
            <value>CoreLogicSync</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>All Core Logic Calls Today</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Create_Lead_Api_Requests</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>System__c</columns>
        <columns>Module__c</columns>
        <columns>Action__c</columns>
        <columns>Message__c</columns>
        <columns>Record__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Module__c</field>
            <operation>equals</operation>
            <value>Api</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Action__c</field>
            <operation>startsWith</operation>
            <value>LeadApiCreateLead</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Debug</value>
        </filters>
        <label>All Create Lead Api Requests</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Errors</fullName>
        <columns>NAME</columns>
        <columns>System__c</columns>
        <columns>Module__c</columns>
        <columns>Action__c</columns>
        <columns>Message__c</columns>
        <columns>Record__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Error</value>
        </filters>
        <label>All Errors</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_GoogleCalendarSync</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Module__c</field>
            <operation>equals</operation>
            <value>GoogleCalendarSync</value>
        </filters>
        <label>All GoogleCalendarSync</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Google_Calendar_Sync_Related</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>System__c</columns>
        <columns>Module__c</columns>
        <columns>Action__c</columns>
        <columns>Message__c</columns>
        <columns>Record__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Module__c</field>
            <operation>equals</operation>
            <value>GoogleCalendarSync</value>
        </filters>
        <label>All Google Calendar Sync Related</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Successful_Create_Lead_Requests</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>System__c</columns>
        <columns>Module__c</columns>
        <columns>Action__c</columns>
        <columns>Message__c</columns>
        <columns>Record__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Module__c</field>
            <operation>equals</operation>
            <value>Api</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Action__c</field>
            <operation>startsWith</operation>
            <value>LeadApiCreateLead</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Debug</value>
        </filters>
        <label>All Successful Create Lead Requests</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Today</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Module__c</columns>
        <columns>Action__c</columns>
        <columns>Message__c</columns>
        <columns>Record__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>All Today</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Drive_Time</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>System__c</columns>
        <columns>Module__c</columns>
        <columns>Action__c</columns>
        <columns>Message__c</columns>
        <columns>Record__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Message__c</field>
            <operation>contains</operation>
            <value>drive time</value>
        </filters>
        <label>Drive Time</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Drive_Time_TODAY</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>System__c</columns>
        <columns>Module__c</columns>
        <columns>Action__c</columns>
        <columns>Message__c</columns>
        <columns>Record__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Message__c</field>
            <operation>contains</operation>
            <value>72 gILBERT aVE</value>
        </filters>
        <label>Drive Time TODAY</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>QAUser</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Module__c</columns>
        <columns>Action__c</columns>
        <columns>Message__c</columns>
        <columns>Record__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Message__c</field>
            <operation>contains</operation>
            <value>12049 Dunblane</value>
        </filters>
        <label>QAUser</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>API-{000000000}</displayFormat>
        <label>Api Log#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>App Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>